--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     </div>
     <div class = "chart">
         <app-gene-chart></app-gene-chart>
+        <app-apex-chart></app-apex-chart>
     </div>
 </div>
 
