--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,24 +1,10 @@
-/* :host {
-    padding: 0;
-    margin: 0;
-} */
-.container {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 20% 80%;
-    grid-template-areas: "menu" "chart";
-    margin: 0;
-    padding: 0;
-    width: 100%;
+.selection {
+    width: 50%;
+    margin-left: 10px;
 }
 
-.menu {
-    background-color: #A8C3CA;
-    grid-area: menu;
-    padding: 10px;
-}
-
-.chart {
-    grid-area: chart;
-    padding: 20px;
+.tSNE_chart {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
