add download image

--- a/src/app/column-distributed-chart/column-distributed-chart.component.css
+++ b/src/app/column-distributed-chart/column-distributed-chart.component.css
@@ -3,3 +3,9 @@
     margin: 35px auto;
   }
   
+  a {
+    float: right;
+    color: black;
+    outline: none;
+    text-decoration: none !important;
+}
