--- a/src/app/column-distributed-chart/column-distributed-chart.component.html
+++ b/src/app/column-distributed-chart/column-distributed-chart.component.html
@@ -1,3 +1,7 @@
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<a href="#" (click)="downloadImage($event)" style="font-size:24px" class="fa fa-picture-o"></a>
+
 <div>
   <div style="display: block">
     <canvas baseChart
