--- a/src/app/groups-chart/groups-chart.component.html
+++ b/src/app/groups-chart/groups-chart.component.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<a href="#" (click)="downloadImage($event)" style="font-size:24px" class="fa fa-save"></a>
+
 <div class="chart-wrapper" *ngIf = "bubbleChartData">
     <canvas baseChart
     [datasets]="bubbleChartData"
@@ -5,6 +8,7 @@
     [chartType]="bubbleChartType">
   </canvas>
 </div>
+
 
 
 
