project with save

--- a/src/app/groups-chart/groups-chart.component.html
+++ b/src/app/groups-chart/groups-chart.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<a href="#" (click)="downloadImage($event)" style="font-size:24px" class="fa fa-save"></a>
+<a href="#" (click)="downloadImage($event)" style="font-size:24px" class="fa fa-picture-o"></a>
 
 <div class="chart-wrapper" *ngIf = "bubbleChartData">
     <canvas baseChart
